k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: backend
    version: v1
  ports:
    - port: 80
      targetPort: 3000
